[tool.poetry]
name = "async-pypi-app"
version = "0.1.0"
description = ""
authors = ["Denis Novikov <alpden550@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
fastapi-chameleon = "^0.1.12"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
pep8-naming = "^0.12.1"
flake8-bugbear = "^21.11.29"
flake8-commas = "^2.1.0"
flake8-eradicate = "^1.2.0"
flake8-bandit = "^2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
